--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = { version = "0.5.1", features = ["json"] }
-serde = "1.0.217"
+rocket = "0.5.1"
+diesel = { version = "2.2.6", features = ["postgres"] }
+dotenvy = "0.15.7"
